Extra spaces error correction

--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ html {
   background-color: whitesmoke;
   height: 25rem;
   margin-bottom: 1rem;
-  font-size: 1.6rem;
+  font-size: 1.9rem;
   font-family: "Gill Sans", sans-serif;
 }
 
